# BezierCurves

./: .gitignore  CMakeLists.txt  README.md
include/: Curves.h  Entity.h  Game.h  RenderWindow.h  Utils.h  Vector.h
src/: Curves.cpp  Entity.cpp  Game.cpp  Main.cpp  RenderWindow.cpp  Vector.cpp
